-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-beta
-
Ubuntu 12.04 32bit, Qt Creator 3.0 based on Qt5.2
-
57b63f4fdba24993a50119a5165f55578186ad93
Steps to reproduce:
- open Creator, make sure you have android sdk/ndk set and a kit using android - if not set them up
- go to Tools -> Options... -> Build & Run -> Debuggers
- select one of the android debuggers and check the ABI
- hit 'Apply' and check ABI again
Current behavior:
- x86-linux-android-elf-32bit is changed to x86-linux-generic-elf-unknown
- arm-linux-android-elf-32bit is changed to arm-linux-generic-elf-32bit
- relates to
-
QTCREATORBUG-11409 Create Tests for ProjectExplorer::Abi::abiFromTargetTriplet
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10755 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72549,10 | Debugger: Prevent overwriting of pre-defined Abi values | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |