Debugger: Prevent overwriting of pre-defined Abi values

Todo: Add a button to rescan ABIs to UI after UI freeze.
Currently you have to change the debugger command and then
change it back when replacing a debugger with a debugger for
something else in place.

Task-number: QTCREATORBUG-10755
Change-Id: Id3cf1da3f198b60e6c538e5478b11f1d6d379ff9
Reviewed-by: hjk <hjk121@nokiamail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>